# Leka-Command-Generator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  generator  install.sh  lkctrl  main.cpp
include/: LKCommandGenerator.h
sources/: CMakeLists.txt  LKCommandGenerator.cpp  Makefile  cmake_install.cmake  main.cpp
